--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ai": "^4.1.17",
     "js-tiktoken": "^1.0.17",
     "lodash-es": "^4.17.21",
+    "ollama-ai-provider": "^1.2.0",
     "p-limit": "^6.2.0",
     "zod": "^3.24.1"
   },
